ev/bonus/confs/bootstrap/namespaces.yml
# **************************************************************************** #
#                                                                              #
#                                                         :::      ::::::::    #
#    namespaces.yml                                     :+:      :+:    :+:    #
#                                                     +:+ +:+         +:+      #
#    By: nhayoun <nhayoun@student.42.fr>            +#+  +:+       +#+         #
#                                                 +#+#+#+#+#+   +#+            #
#    Created: 2026/08/26 19:20:33 by nhayoun           #+#    #+#              #
#    Updated: 2026/08/26 19:20:34 by nhayoun          ###   ########.fr        #
#                                                                              #
# **************************************************************************** #

apiVersion: v1
kind: Namespace
metadata:
  name: argocd
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
