ev/bonus/confs/bootstrap/gitea-ingress.yml
# **************************************************************************** #
#                                                                              #
#                                                         :::      ::::::::    #
#    gitea-ingress.yml                                  :+:      :+:    :+:    #
#                                                     +:+ +:+         +:+      #
#    By: nhayoun <nhayoun@student.42.fr>            +#+  +:+       +#+         #
#                                                 +#+#+#+#+#+   +#+            #
#    Created: 2026/08/26 19:20:27 by nhayoun           #+#    #+#              #
#    Updated: 2026/08/26 19:20:28 by nhayoun          ###   ########.fr        #
#                                                                              #
# **************************************************************************** #

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea-server
  namespace: gitea
spec:
  ingressClassName: traefik
  rules:
    - host: gitea.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-gitea-http
                port:
                  number: 3000
